# aufhooligan

./: .coverage  .env  .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
